# anvil

./: .dockerignore  .env  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start-local-cluster.sh
admin/: Cargo.toml
anvil-cli/: Cargo.toml
anvil-cli/src/: config.rs  context.rs  main.rs
anvil-cli/src/cli/: admin.rs  app.rs  audit.rs  auth.rs  authz.rs  bucket.rs  configure.rs  diagnostics.rs  hf.rs  host_alias.rs  index.rs  lease.rs  mod.rs  object.rs  personaldb.rs  registry.rs  repair.rs  stream.rs  transaction.rs  watch.rs
anvil-cli/src/cli/admin/: app.rs  audit.rs  bucket.rs  cell.rs  common.rs  diagnostics.rs  host_alias.rs  mesh.rs  (+10 more)
anvil-cli/tests/: binary_names.rs  cli.rs  cli_auth.rs  cli_extended.rs  confy_test.rs  public_command_surface.rs
anvil-core/: Cargo.toml  build.rs
anvil-core/benches/coremeta_release_gate/: config.rs  dataset.rs  main.rs  report.rs  runner.rs
anvil-core/proto/: anvil.proto
anvil-core/src/: access_control.rs  admin_audit.rs  admin_auth.rs  anvil_personaldb_sqlite_changeset.rs  append_journal.rs  auth.rs  authz_coremeta_payload.rs  authz_derived_lag_watch.rs  authz_head.rs  authz_journal.rs  authz_namespace_watch.rs  authz_realm_schema.rs  authz_repair.rs  authz_schema.rs  authz_schema_contract.rs  authz_scope.rs  authz_segment.rs  authz_userset_index.rs  bucket_journal.rs  bucket_manager.rs  cache.rs  cluster.rs  cluster_identity.rs  config.rs  control_journal.rs  crypto.rs  derived_index_catchup.rs  derived_index_proof.rs  diagnostic_store.rs  directory_repair.rs  discovery.rs  embedding_provider.rs  error_codes.rs  formats.rs  full_text_segment.rs  gateway_store.rs  git_pack.rs  git_source_index.rs  git_source_manifest.rs  git_source_query.rs  (+79 more)
anvil-core/src/append_journal/: read.rs
anvil-core/src/authz_journal/: idempotency.rs  materialization.rs  projection.rs  resolver.rs  storage_resolver.rs  tests.rs
anvil-core/src/authz_segment/: delta.rs  materialized_state.rs  query.rs  schema_state.rs  tests.rs
anvil-core/src/bucket_journal/: tests.rs
anvil-core/src/control_journal/: current.rs
anvil-core/src/core_store/: block_shard.rs  control_record_proto.rs  coremeta_perf_probe.rs  coremeta_quorum.rs  deterministic_proto.rs  encoding.rs  local.rs  local_admission.rs  local_blob_read.rs  local_block_distribution.rs  local_boundaries.rs  local_codec.rs  local_coremeta_history.rs  local_coremeta_quorum.rs  local_coremeta_recovery.rs  local_coremeta_stream.rs  local_erasure.rs  local_format_writer.rs  local_init_blob.rs  local_internal_coremeta.rs  local_internal_roots.rs  local_internal_shards.rs  local_internal_signing.rs  local_io.rs  local_key_helpers.rs  local_logical_file_path.rs  local_logical_files.rs  local_mutation_preparation.rs  local_object_metadata.rs  local_pending_finalisation.rs  local_refcounts.rs  local_repair_task_scheduler.rs  local_root_binding.rs  local_root_failover.rs  local_root_publication.rs  local_root_publication_evidence.rs  local_root_publication_recovery.rs  local_root_publication_test_control.rs  local_root_register.rs  local_roots.rs  (+21 more)
anvil-core/src/formats/: authz.rs  full_text.rs  git.rs  hybrid.rs  personaldb.rs  segment.rs  table.rs  vector.rs  watch.rs  writer.rs
anvil-core/src/gateway_store/: coremeta.rs  helpers.rs  keys.rs  metadata_rows.rs  mount_routes.rs  record_codec.rs  registry_api.rs  tests.rs
anvil-core/src/hf_journal/: bounded_read_tests.rs  projection.rs
anvil-core/src/index_builder/: authority.rs  helpers.rs  tests.rs
anvil-core/src/index_journal/: current_definitions.rs
anvil-core/src/mesh_control_stream/: store.rs  tests.rs
anvil-core/src/mesh_directory/: helpers.rs  listing.rs  record_proto.rs  tests.rs
anvil-core/src/mesh_lifecycle/: bootstrap.rs  cell.rs  helpers.rs  host_alias.rs  node.rs  portable_snapshot.rs  record_proto.rs  region.rs  tests.rs  topology_activation.rs  topology_mutation.rs
anvil-core/src/metadata_journal/: atomicity_tests.rs  helpers.rs  object_data_target.rs  object_mutation.rs  task_compaction_tests.rs  tests.rs  transaction_projection.rs  version_sort.rs
anvil-core/src/multipart_journal/: codec.rs  current_rows.rs  tests.rs
anvil-core/src/object_manager/: batch_write.rs  read.rs  read_planning.rs  tests.rs  write_visibility.rs
anvil-core/src/partition_fence/: coremeta.rs  tests.rs
anvil-core/src/persistence/: helpers.rs  index_definition_lifecycle.rs  indexes.rs  lifecycle.rs  models.rs  objects.rs  partitioning.rs  streams.rs  tasks.rs  tenancy.rs  tests.rs
anvil-core/src/personaldb_coremeta/: tests.rs
anvil-core/src/personaldb_proposal_admission/: codec.rs  storage_helpers.rs  tests.rs  validation.rs
anvil-core/src/services/: admin.rs  admin_cursor.rs  audit.rs  auth.rs  authz_status.rs  bucket.rs  collection_cursor.rs  coordination.rs  core_store_status.rs  corestore_internal.rs  git_source.rs  huggingface.rs  index.rs  internal.rs  internal_proxy.rs  mesh_control.rs  mod.rs  object.rs  personaldb.rs  registry.rs  repair.rs  root_publication_test_control.rs  saga.rs  saga_reserved.rs  stream.rs  transaction.rs  watch_envelope.rs
anvil-core/src/task_journal/: model.rs  queue.rs  store.rs  tests.rs
anvil-core/src/watch_log/: projection.rs  tests.rs
anvil-core/src/worker/: hf_index.rs
anvil-core/src/writer_segment_catalog/: head.rs
anvil-core/tests/fixtures/: protocol-signing-v1.json
anvil-signer/: Cargo.toml
anvil-signer/src/: main.rs
anvil-test-utils/: Cargo.toml
anvil-test-utils/src/: coremeta_bootstrap.rs  docker_cluster_control.rs  docker_cluster_startup.rs  docker_image.rs  docker_observation.rs  docker_process.rs  docker_response_fault.rs  docker_topology.rs  lib.rs
clients/python/: .gitignore  README.md  pyproject.toml  setup.py
clients/python/tests/: test_package.py
clients/rust/: Cargo.toml  README.md  build.rs
clients/rust/proto/: anvil.proto
clients/rust/src/: lib.rs
clients/rust/tests/: client_api.rs
crates/anvil-corestore-model/: Cargo.toml
crates/anvil-corestore-model/src/: lib.rs  model.rs  tests.rs
(+488 files in other folders)
