[workspace]
resolver = "3"

members = [
    "anvil",
    "anvil-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Worka Anvil AI"
keywords = ["ai","llm","orchestration", "object-store"]
categories = ["ai", "object"]
authors = ["Worka <hello@worka.ai>"]
license = "Apache-2.0"
homepage = "https://github.com/worka-ai/anvil"
repository = "https://github.com/worka-ai/anvil"
rust-version = "1.89.0"
