[workspace]
resolver = "3"

members = [
    "anvil",
    "anvil-signer",
    "anvil-cli",
    "clients/rust",
    "crates/anvil-corestore-model",
    "documentation",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
readme = "README.md"
description = "Native object store, index store, and witness layer"
keywords = ["object-store", "storage", "search", "authorization"]
categories = ["database-implementations"]
authors = ["Anvil maintainers <maintainers@anvil.storage>"]
license = "Apache-2.0"
homepage = "https://github.com/worka-ai/anvil"
repository = "https://github.com/worka-ai/anvil"
documentation = "https://github.com/worka-ai/anvil/tree/main/documentation"
rust-version = "1.96.0"

[profile.ci]
inherits = "dev"
debug = 0
strip = "debuginfo"
incremental = false
