[package]
name = "admin"
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
