[package]
name = "anvil-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
tonic = "0.14.2"
prost = "0.14.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6.1"
dialoguer = "0.11.0"
tokio-stream = "0.1"
anvil = { path = "../anvil" }

[build-dependencies]
tonic-build = "0.14.2"
