[package]
name = "anvil-storage-cli"
version.workspace = true
edition.workspace = true
description = "Command-line client for Anvil"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [".env", "*.env", "anvil-data/**", "target/**"]

publish = false
[[bin]]
name = "anvil-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
tonic = { version = "0.14.2", default-features = false, features = ["transport", "tls-native-roots"] }
prost = "0.14.1"
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6.1"
dialoguer = "0.11.0"
tokio-stream = "0.1"
anvil = { package = "anvil-server", path = "../anvil", version = "0.1.0" }
tempfile = "3.10.1"
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14.2"

[[test]]
name = "confy_test"
path = "tests/confy_test.rs"
harness = true
