[package]
name = "anvil-storage-core"
version.workspace = true
edition.workspace = true
description = "Core storage, indexing, authorization, and witness primitives for Anvil"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [".env", "*.env", "anvil-data/**", "target/**"]

publish = false
[lib]
name = "anvil_core"
path = "src/lib.rs"

[[bench]]
name = "coremeta_release_gate"
path = "benches/coremeta_release_gate/main.rs"
harness = false

[features]
#Declare an enterprise feature, doesn't activate any depdendencies so leave it with an empty array
enterprise = []
test-in-process-personaldb-signers = []
gcp = ["dep:prost-types", "tonic/tls-ring"]
routeguide = ["dep:async-stream", "dep:tokio-stream", "dep:rand"]
reflection = ["dep:tonic-reflection"]
autoreload = ["dep:tokio-stream", "tokio-stream?/net", "dep:listenfd"]
health = ["dep:tonic-health"]
grpc-web = ["dep:tonic-web", "dep:bytes", "dep:http", "dep:hyper", "dep:hyper-util", "dep:tracing-subscriber", "dep:tower", "dep:tower-http", "tower-http?/cors"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
uds = ["dep:tokio-stream", "tokio-stream?/net", "dep:tower", "dep:hyper", "dep:hyper-util"]
streaming = ["dep:tokio-stream", "dep:h2"]
mock = ["dep:tokio-stream", "dep:tower", "dep:hyper-util"]
json-codec = ["dep:bytes"]
compression = ["tonic/gzip"]
tls = ["tonic/tls-ring"]
tls-rustls = ["dep:http", "dep:hyper", "dep:hyper-util", "dep:hyper-rustls", "dep:tower", "tower-http/util", "tower-http/add-extension", "dep:tokio-rustls"]
tls-client-auth = ["tonic/tls-ring"]
types = ["dep:tonic-types"]
h2c = ["dep:hyper", "dep:tower", "dep:http", "dep:hyper-util"]
cancellation = ["dep:tokio-util"]

full = ["gcp", "routeguide", "reflection", "autoreload", "health", "grpc-web", "tracing", "uds", "streaming", "mock", "json-codec", "compression", "tls", "tls-rustls", "tls-client-auth", "types", "cancellation", "h2c", "tonic-prost"]
default = ["full"]
tonic-prost = ["dep:tonic-prost"]

[dependencies]
anyhow = { version = "1" }
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.8.2"
personaldb-protocol = "=0.1.0"
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1", features = ["full"] }

prost = "0.14.1"

tonic = "0.14.2"
tonic-web = { version = "0.14.2", optional = true }
tonic-health = { version = "0.14.2", optional = true }
tonic-reflection = { version = "0.14.2", optional = true }
tonic-types = { version = "0.14.2", optional = true }
tonic-prost = { version = "0.14.2", optional = true }
lazy_static = { version = "1.5.0" }

async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

tempfile = "3.10.1"
tokio-util = { version = "0.7.8", optional = true }
tower = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1.16", optional = true }
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"], optional = true }
prost-types = { version = "0.14", optional = true }
http = { version = "1", optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1.4", optional = true }
listenfd = { version = "1.0", optional = true }
bytes = { version = "1", optional = true }
h2 = { version = "0.4", optional = true }
tokio-rustls = { version = "0.26.1", optional = true, features = ["ring", "tls12"], default-features = false }
hyper-rustls = { version = "0.27.0", features = ["http2", "ring", "tls12"], optional = true, default-features = false }
tower-http = { version = "0.6", optional = true }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
futures-core = "0.3.31"
time = "0.3.44"
futures-util = "0.3.31"
hf-hub = "0.4.3"
globset = "0.4"

local-ip-address = "0.6.5"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
trust-dns-resolver = "0.23.2"
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux", "quic"] }
reed-solomon-erasure = "6.0.0"
ahash = "0.8.12"
futures ="0.3.31"
fallible-streaming-iterator = "0.1"
flate2 = "1"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
axum = { version = "0.8.5", features = ["http1"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
sha2 = "0.10.9"
sha1 = "0.10.6"
hex = "0.4.3"
hmac = "0.12.1"
idna = "1.1.0"
axum-extra = { version = "0.10.2", features = ["typed-header"] }
regex = "1.11.3"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "session"] }
unicode-normalization = "0.1.24"
caseless = "0.2.2"
unicode-segmentation = "1.13.3"
# The transitive idna/ICU stack uses ZeroMap; keep zerovec allocation support enabled in the server graph.
zerovec = { version = "0.11.6", default-features = false, features = ["alloc"] }
zstd = "0.13"
aws-sigv4 = { version = "1", features = ["sign-http", "http1", "sign-eventstream"] }
aws-credential-types = "1"   # for Credentials
aws-smithy-runtime-api = "1" # for Identity

aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
constant_time_eq = "0.4.2"
http-body-util = "0.1.1"
subtle = "2.6.1"
moka = { version = "0.12.11", features = ["future"] }
hnsw_rs = "0.3.4"
rocksdb = { version = "0.24.0", default-features = false, features = ["bindgen-runtime", "lz4", "zstd"] }

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
