[package]
name = "anvil-storage-test-utils"
version.workspace = true
edition.workspace = true
description = "Integration test utilities for Anvil"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [".env", "*.env", "anvil-data/**", "target/**"]

publish = false
[lib]
name = "anvil_test_utils"
path = "src/lib.rs"

[features]
enterprise = ["anvil/enterprise"]

[dependencies]
anvil = { package = "anvil-server", path = "../anvil", version = "0.3.0" }
anvil-core = { package = "anvil-storage-core", path = "../anvil-core", version = "0.3.0", features = ["test-in-process-personaldb-signers"] }
anyhow = "1"
base64 = "0.22"
personaldb-protocol = { git = "ssh://git@github.com/worka-ai/personaldb.git", rev = "41295b43cd4634e77ab5b6bf411e5233217838b0" }
tokio = { version = "1.47.1", features = ["full"] }

aws-config = "1.1.7"
aws-sdk-s3 = "1.18.0"

futures-util = "0.3.31"
serde_json = "1.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1.18.1", features = ["v4"] }
dotenvy = "0.15.7"
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux", "quic"] }
tonic = "0.14.2"
tracing = { version = "0.1.16" }
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt", "env-filter"] }

hex = "0.4.3"
jsonwebtoken = "9.3.1"
