[build-system]
requires = ["setuptools>=75", "wheel", "grpcio-tools>=1.68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-storage-client"
version = "0.1.0"
description = "Python gRPC client package for Anvil Storage"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Anvil maintainers", email = "hello@worka.ai" }]
keywords = ["object-store", "storage", "grpc", "s3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "grpcio>=1.68",
  "protobuf>=5",
]

[project.urls]
Homepage = "https://github.com/worka-ai/anvil"
Repository = "https://github.com/worka-ai/anvil"
Documentation = "https://github.com/worka-ai/anvil/tree/main/documentation"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anvil_storage_client = ["proto/anvil.proto", "py.typed"]
