[package]
name = "anvil-corestore-model"
version.workspace = true
edition.workspace = true
readme.workspace = true
description = "Executable ANVIL-0007 CoreStore protocol model"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
exhaustive-small = []

[dependencies]
stateright = "0.31.0"

[dev-dependencies]
proptest = "1.6"
